--- a/style.css
+++ b/style.css
@@ -26,3 +26,8 @@ justify-content: center;
     justify-content: center;  
     
 }
+.main-image {
+    display: flex;
+    justify-content: center;  
+    
+}
