feat: update style.css

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Times New Roman', serif;
-    color: #32325f;
+    color: #1f1f3b;
    background-color: antiquewhite;
 }
 
