--- a/style.css
+++ b/style.css
@@ -1,33 +1,198 @@
 body {
     font-family: 'Times New Roman', serif;
-    color: #1f1f3b;
-   background-color: antiquewhite;
-}
-
-.hero {
-display: flex;
-justify-content: center;
-}
-
-.contacts-text {
-    display: flex;
+    color: rgba(0, 0, 0, 0.753);
+    background-color: white;
+    position: relative;
+    min-height: 100%;
+    margin: 0 auto;
+    padding: 0;
+    display: block;
+    width: 940px;
+  }
+  
+  .header-body {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-color: rgb(221, 207, 204);
+      position: relative;
+      z-index: 2;
+      max-width: 100%;
+      width: 940px;
+      
+  }
+  
+  .header {
+      position: fixed;
+      width: 100%;
+      top: 0;
+      left: 0;
+      z-index: 50;
+  }    
+  
+  .header-logo {
+      padding-left: 10px;
+      color: rgb(104, 104, 104)
+  }
+  
+  .header-list {
+      display: flex;
+      padding: 0px;
+   }
+   
+   .header-link {
+   text-transform: uppercase;
+   font-size: 15px;
+   text-decoration: none;
+   color: rgb(104, 104, 104);
+   margin: 0px 0px 0px 20px;
+   padding-right: 10px;
+   }
+  
+  .header-link:hover {
+      color: rgba(104, 104, 104, 0.753);
+      text-decoration: underline;
+  }
+  
+   .container {
+      max-width: 940px;
+      margin: 0px auto;
+      padding: 0px 10px;
+  }
+  
+  main {
+    display: flex; 
     justify-content: center;
-}
-.list {
-    display: flex;
-    justify-content: center; 
-}
-.subtitle {
-    display: flex;
-    justify-content: center; 
-}
-.about-me {
-    display: flex;
-    justify-content: center;  
-    
-}
-.main-image {
-    display: flex;
-    justify-content: center;  
-    
-}
+    justify-content: space-around;
+    line-height: 35px;
+    font-size: 24px;
+    background-color: rgb(255, 255, 230);
+    padding-bottom: 10px;
+    padding-top: 60px;
+  }
+  
+  h2 {
+      background-color: rgb(250, 250, 250);
+  }
+  
+  li {
+      list-style-type: none;
+  }
+  
+  .left {
+      background-color:rgba(221, 207, 204, 0.507);
+  }
+  
+  .right {
+      margin-top: 100px;
+      width: 524px;
+  }
+  
+  .left img {
+      padding: 50px 10px 10px 35px;
+  }
+  
+  .contacts-title {
+      padding-left: 10px;
+  }
+  
+  .education-title {
+      padding-left: 10px;
+  }
+  
+  .contacts-list {
+      padding: 10px;
+  }
+  
+  .education-list {
+      padding: 10px;
+  }
+  
+  .brand {
+      padding-left: 10px;
+  }
+  
+  .about-me {
+      margin-top: 180px;
+  }
+  
+  .about-me-title {
+      padding-left: 10px;
+  }
+  
+  .about-text {
+      padding-left: 10px;
+  }
+  
+  .key-strengths-title {
+      padding-left: 10px;
+  }
+  
+  .strengths {
+      padding-left: 10px;
+  }
+  
+  .skill {
+      padding-left: 10px;
+  }
+  
+  .skills-title {
+      padding-left: 10px;
+  }
+  
+  .code-title {
+      padding-left: 10px;
+  }
+  
+  .project-link {
+      padding-left: 10px;
+      text-decoration: none;
+      color: rgba(0, 0, 0, 0.753);
+  }
+  
+  .project-link:hover {
+      color: rgba(104, 104, 104, 0.753);
+      text-decoration: underline;
+  }
+  
+  .section-footer {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      height: 100px;
+      font-size: 30px;
+      background-color: rgba(221, 207, 204, 0.993);
+  }
+  
+  .github-link {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      color:rgba(0, 0, 0, 0.753);
+      background-repeat: no-repeat;
+      padding-left: 10px;
+      text-decoration: none;
+  }
+  
+  .github-link:hover {
+      color: rgba(104, 104, 104, 0.753);
+      text-decoration: underline;
+  }
+  
+  .year {
+      color:rgba(0, 0, 0, 0.753);
+      margin-top: 0px;
+      margin-bottom: 0px;
+      padding-right: 60px;
+      
+  }
+  
+  .rss-link {
+      color:rgba(0, 0, 0, 0.753);
+      padding-right: 30px;
+      width: 100px;
+      height: 50px;
+      background-repeat: no-repeat;
+      background-position: right center;
+  }
+  
